@@ -28,41 +28,42 @@
 
 (require 'patches)
 
-(when (request 'circe)
+(autoload 'circe "circe" "Connect to an IRC server" t)
 
-  (setq circe-default-realname user-full-name
-        circe-ignore-list nil
-        circe-server-coding-system '(latin-1 . undecided)
-        circe-server-auto-join-channels '(("^freenode$" "#emacs" "#fsbot" "#muse"))
-        circe-nickserv-passwords `(("freenode" ,public-passwd)))
+(setq circe-default-realname user-full-name
+      circe-ignore-list nil
+      circe-server-coding-system '(latin-1 . undecided)
+      circe-server-auto-join-channels
+        '(("^freenode$" "#ploki")))
 
-  (setq lui-max-buffer-size 30000
-        lui-flyspell-p t
-        lui-flyspell-alist '(("+linux.de" "german8")
-                             ("." "american")))
+(setq lui-max-buffer-size 30000
+      lui-flyspell-p t
+      lui-flyspell-alist '(("epiknet" "francais")
+                           ("." "american")))
 
-  (eval-after-load "circe"
-    '(progn
-       (require 'lui-irc-colors)
-       (add-to-list 'lui-pre-output-hook 'lui-irc-colors)
-       (add-to-list 'circe-receive-message-functions
-                    'fc-bitlbee-auth)))
+(eval-after-load "circe"
+  '(progn
+     (require 'lui-irc-colors)
+     (add-to-list 'lui-pre-output-hook 'lui-irc-colors)
+     (add-to-list 'circe-receive-message-functions
+                  'fc-bitlbee-auth)))
 
-  (defun fc-bitlbee-auth (nick user host command args)
-    "Authenticate to a bitlbee server."
-    (when (and (string= command "JOIN")
-               (circe-server-my-nick-p nick))
-      (with-circe-server-buffer
-       (when (string= circe-server-network "bitlbee")
-         (circe-server-send
-          (format "PRIVMSG #bitlbee :identify %s"
-                  bitlbee-passwd))))))
+(defun fc-bitlbee-auth (nick user host command args)
+  "Authenticate to a bitlbee server."
+  (when (and (string= command "JOIN")
+             (circe-server-my-nick-p nick))
+    (with-circe-server-buffer
+      (when (string= circe-server-network "bitlbee")
+        (circe-server-send
+         (format "PRIVMSG &bitlbee :identify %s"
+                 public-passwd))))))
 
-  (defun irc ()
-    "Connect to IRC."
-    (interactive)
-    (circe "irc.freenode.net" "6667" "freenode" public-passwd "Sigma[Mtp]"))
-  )
+(defun irc ()
+  "Connect to IRC."
+  (interactive)
+  ;; (circe "irc.freenode.net" "6667" "freenode")
+  ;; (circe "sarg" "23523" "IRCnet" muh-passwd)
+  (circe "localhost" "6667" "bitlbee" public-passwd "Yann"))
 
 (provide 'circe-config)
 ;;; circe-config.el ends here
